--- a/muk_web_client/views/res_config_settings_view.xml
+++ b/muk_web_client/views/res_config_settings_view.xml
@@ -29,7 +29,7 @@
 	    <field name="model">res.config.settings</field>
 	    <field name="inherit_id" ref="base_setup.res_config_settings_view_form"/>
 	    <field name="arch" type="xml">
-	        <div name="multi_company" position="after">
+	        <div id="multi_company" position="after">
 	            <h2>Web Client</h2>
 	            <div class="row mt16 o_settings_container" name="web_client">
 	                <div class="col-12 col-lg-6 o_setting_box">
